fixed overflow

--- a/src/Comps/nav/Bar.css
+++ b/src/Comps/nav/Bar.css
@@ -65,6 +65,7 @@ cursor: pointer;
     .NavbarItems{
         z-index: 99;
         background-color: rgb(255, 255, 255);
+        width: 98%;
     }
    .nav-menu{
     display: flex;
