--- a/src/Home.css
+++ b/src/Home.css
@@ -115,7 +115,7 @@ width: 100%;
 .image {
     padding: 1rem;
     height: 25rem;
-    width: 95%;
+    width: 100%;
     object-fit: cover;
 }
 .image:hover {
@@ -146,8 +146,8 @@ width: 100%;
 @media only screen and (max-width: 600px ) {
   hr{
     height: 1px;
-  width: 95%;
-    background-color: #0e293f;
+  width: 100%;
+    background-color: #003666;
   }
   .stories{
 
@@ -181,6 +181,8 @@ width: 100%;
       border-left-style: none ;
       border-right-style: none ;
       border-bottom-style: ridge ;
+      width: 98%;
+      overflow: hidden;
   }
   .head{
     margin-bottom: 0px;
@@ -200,6 +202,7 @@ width: 100%;
     height: 18rem;
     width: 97%;
     object-fit: cover;
+    
 }
 
   .text1{
