--- a/src/footer.css
+++ b/src/footer.css
@@ -84,6 +84,7 @@ li:hover{
 	position: sticky;
 	top: 0;
 	background-color: rgb(244, 244, 244);
+	width: 98%;
 
 	
 	
